# zask

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  bash.sh  vcpkg.json
scripts/: build-linux.sh  build-windows.sh
src/: main.cpp
src/core/: MediaConverter.cpp  MediaConverter.h
src/ui/: MainFrame.h
toolchains/: mingw-w64-x86_64.cmake
